fixed number and svg alignment

--- a/src/webparts/scw/components/Scw.module.scss
+++ b/src/webparts/scw/components/Scw.module.scss
@@ -97,6 +97,13 @@
         background-color: white;
     }
 
+    .ant-steps .ant-steps-item-icon .ant-steps-icon {
+        top: -2.5px;
+    }
+
+    .anticon {
+        vertical-align: -0.225em;
+    }
 
     .ant-steps .ant-steps-item-process .ant-steps-item-icon >.ant-steps-icon {
         color:rgb(0,120,212);
